NXP-5565: Style faceted Search tab

--- a/nuxeo-platform-faceted-search-jsf/src/main/resources/nuxeo.war/layouts/layout_faceted_search_template.xhtml
+++ b/nuxeo-platform-faceted-search-jsf/src/main/resources/nuxeo.war/layouts/layout_faceted_search_template.xhtml
@@ -4,7 +4,7 @@
            xmlns:nxl="http://nuxeo.org/nxforms/layout"
            id="#{layout.id}">
 
-  <div>
+  <div class="facetedSearchBlock">
     <nxl:layoutRow>
       <nxl:layoutRowWidget>
         <nxl:widget widget="#{widget}" value="#{value}"/>
