--- a/nuxeo-platform-faceted-search-dm/src/main/resources/web/nuxeo.war/css/faceted-search.css
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/web/nuxeo.war/css/faceted-search.css
@@ -1,44 +1,44 @@
 /* Faceted Search Styles */
-.facetedSearchActionBar{ border-bottom:1px solid #cacaca;  padding:2px }
-.facetedSearchActionBar a{ float:left;  padding-top:3px }
-.facetedSearchActionBar input.button{ float:right;  font-weight:bold;  margin:0 0 0 5px;  padding:0 5px 0 7px;  width:auto }
+div.facetedSearchActionBar{ border-bottom:1px solid #cacaca;  padding:2px }
+div.facetedSearchActionBar a{ float:left; font-size: 9px; line-height: normal; padding-top:5px }
+div.facetedSearchActionBar input.button{ float:right;  font-weight:bold;  margin:2px 0 2px 5px;  padding:0 5px 0 7px;  width:auto }
 
 #facetedSearchSelectorDiv, #savedFacetedSearchSelectorDiv{ border-bottom:1px solid #f1f1f1;  margin:0;  padding:0 0 5px }
-#facetedSearchSelectorDiv p, #savedFacetedSearchSelectorDiv p{ background-color:#ecf6ff;  border-bottom:1px solid #cacaca;  border-top:1px solid #fff;  color:#323232;  font:bold 11px "Lucida Grande",Helvetica,sans-serif;  padding:3px }
+#facetedSearchSelectorDiv p, #savedFacetedSearchSelectorDiv p{ background-color:#ecf6ff; border-bottom:1px solid #cacaca; border-top:1px solid #fff; color:#323232; font-weight:bold; font-size: 11px; padding:3px }
 
-.facetedSearchBlock .labelColumn{ font-weight:normal;  width:70px }
-.facetedSearchBlock .tinyLabel{ display:inline-block;  text-align:right;  width:24px }
+div.facetedSearchBlock .labelColumn, div.facetedSearchBlock .labelColumn span { font-weight:normal;  width:70px }
+div.facetedSearchBlock .tinyLabel{ display:inline-block;  text-align:right;  width:24px }
 
-.facetedSearchBlock .dataInput{ width:100% }
-.facetedSearchBlock .dataInput td{ padding:3px 4px 5px 0 }
-.facetedSearchBlock input, .facetedSearchBlock select{ width:100% }
-.facetedSearchBlock .dataInputTextDate{ font-size:9px;  margin:0 5px 3px 3px;  width:45px }
-.facetedSearchBlock .widgetContent{ border-bottom:1px solid #dcdcdc }
-.facetedSearchBlock h5{ background-color:#f1f2f3;  border-bottom:1px solid #cacaca;  border-top:1px solid #fff;  color:#323232;  font:bold 11px "Lucida Grande",Helvetica,sans-serif;  padding:3px }
-.facetedSearchBlock .widgetContent .labelOpenPopUp{ border-bottom:1px solid #cacaca;  color:#323232;  display:block;  font:normal 10px "Lucida Grande",Helvetica,sans-serif;  margin:0 0 5px;  padding:0 0 1px }
+div.facetedSearchBlock .dataInput{ width:100% }
+div.facetedSearchBlock .dataInput td{ padding:3px 4px 5px 0 }
+div.facetedSearchBlock input, .facetedSearchBlock select{ width:100% }
+div.facetedSearchBlock .dataInputTextDate{ font-size:9px;  margin:0 5px 3px 3px;  width:45px }
+div.facetedSearchBlock .widgetContent{ border-bottom:1px solid #dcdcdc; font-size: 9px }
+div.facetedSearchBlock h5.widgetTitle{ background-color:#f1f2f3;  border-bottom:1px solid #cacaca;  border-top:1px solid #fff;  color:#323232;  font:bold 11px "Lucida Grande",Helvetica,sans-serif;  padding:3px; margin: 0 }
+div.facetedSearchBlock .widgetContent .labelOpenPopUp{ border-bottom:1px solid #cacaca;  color:#323232;  display:block;  font:normal 10px "Lucida Grande",Helvetica,sans-serif;  margin:0 0 5px;  padding:0 0 1px }
 
 #saveFacetedSearchForm input{ margin-left:3px }
 
-.facetedSearchPopUp{ background-color:white;  border:1px solid #b5bcc6;  display:none;  left:25%;  position:absolute;  top:15%;  width:400px;  z-index:10000 }
-.facetedSearchPopUp .closePopUpHeader{ background-color:#f6f8ff;  border-bottom:1px dotted #dedede;  padding:3px;  text-align:right }
-.facetedSearchPopUp .closePopUpHeader .closePopUp{ cursor:pointer;  float:right }
-.facetedSearchPopUp .closePopUpHeader .popUpTitle{ float:left;  font-size:110% }
-.facetedSearchPopUp .popUpContent{ height:390px;  overflow:auto;  padding:10px }
+div.facetedSearchPopUp{ background-color:white;  border:1px solid #b5bcc6;  display:none;  left:25%;  position:absolute;  top:15%;  width:400px;  z-index:10000 }
+div.facetedSearchPopUp .closePopUpHeader{ background-color:#f6f8ff;  border-bottom:1px dotted #dedede;  padding:3px;  text-align:right }
+div.facetedSearchPopUp .closePopUpHeader .closePopUp{ cursor:pointer;  float:right }
+div.facetedSearchPopUp .closePopUpHeader .popUpTitle{ float:left;  font-size:110% }
+div.facetedSearchPopUp .popUpContent{ height:390px;  overflow:auto;  padding:10px }
 
-.facetedSearchBlock .dataInput .facetedSearchPopUp td, .facetedSearchBlock .thin td{ padding:1px }
-.facetedSearchBlock .widgetContent .labelOpenPopUp .labelTool{ cursor:pointer;  float:right }
-.facetedSearchBlock table.thin{ margin:0 0 7px 0 }
+div.facetedSearchBlock .dataInput div.facetedSearchPopUp td, div.facetedSearchBlock table.thin td{ padding:1px }
+div.facetedSearchBlock .widgetContent .labelOpenPopUp .labelTool{ cursor:pointer;  float:right }
+div.facetedSearchBlock table.thin{ margin:0 0 7px 0 }
 
 .UserSuggestionInput table{ width:100% }
 
 
 /* Pop ups */
 /* Search document relation */
-.genericPopUp{ background-color:#fff;  position:absolute;  width:400px;  border:1px solid #b5bcc6;  z-index:10000;  display:none }
-.genericPopUp .closePopUpHeader{ background-color:#f6f8ff;  border-bottom:1px dotted #dedede;  padding:3px;  text-align:right }
-.genericPopUp .closePopUpHeader .closePopUp{ float:right;  cursor:pointer }
-.genericPopUp .closePopUpHeader .popUpTitle{ float:left;  font-size:110% }
-.genericPopUp .popUpContent{ overflow:auto;  height:390px;  padding:10px }
+div.genericPopUp{ background-color:#fff;  position:absolute;  width:400px;  border:1px solid #b5bcc6;  z-index:10000;  display:none }
+div.genericPopUp .closePopUpHeader{ background-color:#f6f8ff;  border-bottom:1px dotted #dedede;  padding:3px;  text-align:right }
+div.genericPopUp .closePopUpHeader .closePopUp{ float:right;  cursor:pointer }
+div.genericPopUp .closePopUpHeader .popUpTitle{ float:left;  font-size:110% }
+div.genericPopUp .popUpContent{ overflow:auto;  height:390px;  padding:10px }
 
 /* huge popUp */
-.bigPopUp{ width:80%;  height:70% }
+div.bigPopUp{ width:80%;  height:70% }
