--- a/nuxeo-platform-faceted-search-jsf/src/main/resources/themes/css/faceted_search.css
+++ b/nuxeo-platform-faceted-search-jsf/src/main/resources/themes/css/faceted_search.css
@@ -38,6 +38,7 @@ author: lkemen@nuxeo.com
   border-width: 1px; border-style: solid none;  border-color: "noborder (__FLAVOR__ border)" "neutral.light (__FLAVOR__ border)" "neutral.light (__FLAVOR__ border)";
   color: "default (__FLAVOR__ color)";
   font-size: 1em;
+  font-weight: bold;
   margin: 0;
   padding: .3em }
 
