NXP-10589: Make labelcolumn styles more robust

--- a/nuxeo-platform-faceted-search-jsf/src/main/resources/themes/css/faceted_search.css
+++ b/nuxeo-platform-faceted-search-jsf/src/main/resources/themes/css/faceted_search.css
@@ -54,11 +54,13 @@ author: lkemen@nuxeo.com
 .facetedSearchBlock input[type="text"] { width: 95% }
 .facetedSearchBlock select { width: 100% }
 .facetedSearchBlock .tinyLabel { display: inline-block; text-align: right; padding-right: .2em; width: 30px }
-.facetedSearchBlock input.rich-calendar-input { margin: .1em .3em .1em 0em; max-width: 56%; min-width: 50%; }
+.facetedSearchBlock input.rich-calendar-input { margin: .1em .3em .1em 0em; max-width: 56%; min-width: 50% }
 
 .UserSuggestionInput table { width: 100% }
 #saveFacetedSearchForm input { margin-left: .3em }
 
-/* Faceted Search Layouts from Studio */
-.facetedSearchBlock .containerWidgetPanel .labelColumn { font-weight: normal; text-align: left }
+.facetedSearchBlock .labelColumn,
+.facetedSearchBlock .containerWidgetPanel .labelColumn,
+.facetedSearchBlock .widgetPanel .labelColumn,
+.facetedSearchBlock .widgetTable .labelColumn { font-weight: normal; text-align: left; width: auto }
 .facetedSearchBlock .widgetLabel { color: "gray.dark (__FLAVOR__ color)"; padding: 0 1em .4em }
