--- a/nuxeo-platform-faceted-search-jsf/src/main/resources/web/nuxeo.war/layouts/layout_faceted_search_default_actions_template.xhtml
+++ b/nuxeo-platform-faceted-search-jsf/src/main/resources/web/nuxeo.war/layouts/layout_faceted_search_default_actions_template.xhtml
@@ -3,7 +3,7 @@
   xmlns:h="http://java.sun.com/jsf/html"
   xmlns:nxl="http://nuxeo.org/nxforms/layout" id="#{layout.id}">
 
-  <div class="facetedSearchBlock">
+  <div class="facetedSearchBlock compactLayout">
    <nxl:layoutRow>
     <nxl:layoutRowWidget>
       <nxl:widget widget="#{widget}" value="#{value}" />
